# face-detect-and-align

./: .gitignore  CMakeLists.txt  READ.ME  README.md  chnfeature
.kdev4/: fhog_pyramid_detect.kdev4
.zcache/: DEBS_avail
chnfeature/: .fuse_hidden00008e9700000002  CMakeLists.txt  Pyramid.cpp  Pyramid.h  main.cpp  sse.hpp  sseFun.cpp  sseFun.h  wrappers.hpp
dlib_ssvm/: .main.cpp.swp  .warp_fhog_extractor.h.swp  CMakeLists.txt  main.cpp  warp_fhog_extractor.h
dlib_ssvm/dlib/: CMakeLists.txt
dlib_ssvm/dlib/all/: source.cpp
dlib_ssvm/dlib/dir_nav/: dir_nav_kernel_2.h
dlib_ssvm/dlib/image_processing/: frontal_face_detector.h  object_detector.h  remove_unobtainable_rectangles.h  shape_predictor.h
dlib_ssvm/dlib/image_transforms/: fhog.h
logs/: lfw_frontal_face.xml  lfw_left_faces_n8_c450.xml  lfw_right_face_n80_c450.xml  lfw_rotate_left.xml  lfw_rotate_right.xml  para_tunning  super_pack_lfw.xml
misc/: CMakeLists.txt  NonMaxSupress.cpp  NonMaxSupress.h  jitterImage.cpp  jitterImage.h  main.cpp  misc.cpp  misc.hpp
scanner/: .main.cpp.swp  .scanner.cpp.swp  .scanner.h.swp  CMakeLists.txt  main.cpp  scanner.cpp  scanner.h
shape_predictor/: .process_folder.cpp.swp  .process_haar_folder.cpp.swp  .shape_predictor.cpp.swp  .shape_predictor.hpp.swp  .test_main.cpp.swp  CMakeLists.txt  demo_main.cpp  haar_main.cpp  lfw_main.cpp  process_folder.cpp  process_haar_folder.cpp  shape_predictor.cpp  shape_predictor.hpp  test_haar_main.cpp  test_main.cpp  tinyxml.cpp  tinyxml.h
svm/: .opencv_warpper_libsvm.cpp.swp  CMakeLists.txt  opencv_warpper_libsvm.cpp  opencv_warpper_libsvm.h  readme.txt  svm.cpp
train/: .detect_check.h.swp  .main.cpp.swp  .test_model.cpp.swp  CMakeLists.txt  detect_check.h  main.cpp  test_model.cpp
